# Masterthesis-Heterogeneous-PC

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  experiment_evaluation.py  iteration_plot.py
benchmarks/: benchmarks.json  benchmarks_docker.json
docker/: Dockerfile  Dockerfile.base  Dockerfile.base.ppc64le  Dockerfile.ppc64le
iteration_count_data/TCGA-GBM-1000/: 1test_iteration_map.csv  2test_iteration_map.csv  3test_iteration_map.csv  4test_iteration_map.csv
src/: CMakeLists.txt  State.cu  State.cuh  csv_parser.cpp  csv_parser.hpp  cudaUtil.cuh  main.cpp
src/correlation/: corHelper.cu  corHelper.cuh  corOwn.cu  corOwn.cuh
src/executor/: cpuExecutor.cpp  cpuExecutor.hpp  executor.hpp  gpuExecutor.cu  gpuExecutor.cuh
src/executor/independence/: cpuInd.cpp  cpuInd.hpp  gpuInd.cu  gpuInd.cuh
src/executor/testing/: cpuRowTests.cpp  cpuRowTests.hpp  cpuUtil.cpp  cpuUtil.hpp  cpuWorkstealingTests.cpp  cpuWorkstealingTests.hpp  gpuRowTests.cu  gpuRowTests.cuh  gpuWorkstealingTests.cu  gpuWorkstealingTests.cuh
src/independence/: compact.cu  compact.cuh  cpu.cpp  cpu.cu  cpu.cuh  cpu.hpp  cpu_L0.cu  cpu_L0.cuh  gpu.cu  gpu.cuh  gpu_L0.cu  gpu_L0.cuh  mm_indepTests.cu  mm_indepTests.cuh  mm_test.cu  mm_test.cuh  rowIndTest.cu  rowIndTest.cuh  skeleton.cpp  skeleton.cu  skeleton.cuh  skeleton.hpp
src/loadbalance/: balancer.cpp  balancer.hpp
src/loadbalancing/: balancer.cpp  balancer.hpp
src/util/: GPUData.cu  GPUData.cuh  State.cu  State.cuh  assertions.cpp  assertions.hpp  concurrentqueue.h  constants.hpp  cuda_util.cu  cuda_util.cuh  indepUtil.h  indepUtil.hpp  indep_util.hpp  matrixPrint.cuh  matrix_print.cuh  memInfo.cu  memInfo.cuh  mem_info.cu  mem_info.cuh  sepset_util.hpp  state.cu  state.cuh
